rename the output directory

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,10 +12,10 @@
   # directory if one has been set, or the root directory if
   # a base has not been set. This sample publishes the directory
   # located at the absolute path "root/project/build"
-  publish = "build"
+  publish = "dist"
 
   # Default build command.
-  command = "mkdir -p build; cp -Rv src/* build"
+  command = "mkdir -p dist; cp -Rv src/* dist"
 
 # [[plugins]]
 #   package = "@qworum/netlify-plugin-qworum"
