use Qworum's Netlify build plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,5 +17,5 @@
   # Default build command.
   command = "mkdir -p dist; cp -Rv src/* dist"
 
-# [[plugins]]
-#   package = "@qworum/netlify-plugin-qworum"
+[[plugins]]
+  package = "@qworum/netlify-plugin-qworum"
